[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-lightweight-charts-ntf"
authors = [
    {name = "Joe Rosa", email = "joe.rosa@itpmngt.co.uk"},
]
description = "Wrapper for TradingView lightweight-charts using ntf fork"
readme = "README.md"
requires-python = ">=3.7"
# keywords = ["one", "two"]
license = {text = "UNLICENSED"}
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
dependencies = [
    "streamlit >= 0.62",
]
# url="https://github.com/freyastreamlit/streamlit-lightweight-charts-ntf"
version = "0.7.18"
# dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

include_package_data = true

# [options.package_data]
# streamlit_lightweight_charts_ntf = [
#     "frontend/build/*",
#     "frontend/build/static/js/*"
# ]

# [tool.setuptools]
# include-package-data = true

[tool.setuptools.packages.find]
where = ["streamlit_lightweight_charts_ntf"]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/