[metadata]
name = streamlit-lightweight-charts-ntf
version = 0.7.18
author = Joe Rosa
author_email = joe.rosa@itpmngt.co.uk
description = Wrapper for TradingView lightweight-charts using ntf fork

[options]
packages = find:
include_package_data = True

[options.package_data]
# my_package = data/*.txt
# streamlit_lightweight_charts_ntf/frontend/build = *
streamlit_lightweight_charts_ntf = /frontend/build/*